2001-03-03  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/multiboot.texi (History): Written.
	
2001-02-28  OKUJI Yoshinori  <okuji@gnu.org>

	From HASEGAWA Tomoki <thasegawa@mta.biglobe.ne.jp>:
	* lib/device.c (get_ide_disk_name) [__FreeBSD__]: Add support
	for FreeBSD-4.0 or later. Use "/dev/rad0".
	* util/grub-install.in (convert): Add code for FreeBSD
	disklabels.

2001-02-28  OKUJI Yoshinori  <okuji@gnu.org>

	From Thierry Laronde <thierry@cri74.org>:
	* stage2/stage2.c (cmain): If the default entry is wrong, set it
	to FALLBACK_ENTRY if FALLBACK_ENTRY is valid, otherwise set it
	to zero. Suggested by Nicolas Boos <nicolas.boos@wanadoo.fr>.
	
2001-02-28  OKUJI Yoshinori  <okuji@gnu.org>

	* acconfig.h (AUTO_LINUX_MEM_OPT): New entry.
	* configure.in (--disable-auto-linux-mem-opt): New option.
	* stage2/builtins.c (kernel_func) [!AUTO_LINUX_MEM_OPT]: Add
	KERNEL_LOAD_NO_MEM_OPTION into LOAD_FLAGS, whether the user
	specifies --no-mem-option or not.
	
2001-02-27  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (chainloader_func): Don't check if the
	current partition is FAT, but check if it has a FAT partition
	type and the BPB has a system id starting with "MSWIN".
	
2001-02-27  OKUJI Yoshinori  <okuji@gnu.org>

	Added hercules support based on a patch by Frank Mehnert
	<fm3@os.inf.tu-dresden.de>. I translated his assembly code into
	C, and separated hercules from the normal console.
	
	* configure.in (--disable-hercules): New option.
	
	* grub/asmstub.c: Include <hercules.h>.
	(set_attrib): Renamed to ...
	(console_set_attrib): ... this.
	(herc_cls): New function.
	(herc_getxy): Likewise.
	(herc_gotoxy): Likewise.
	(herc_putchar): Likewise.
	(herc_set_attrib): Likewise.
	
	* stage2/Makefile.am (noinst_HEADERS): Added hercules.h.
	(libgrub_a_CFLAGS): Added -DSUPPORT_HERCULES=1.
	(HERCULES_FLAGS): New variable.
	(STAGE2_COMPILE): Added $(HERCULES_FLAGS).
	(pre_stage2_exec_SOURCES): Added hercules.c.
	* stage2/asm.S [!STAGE1_5] (set_attrib) Renamed to ...